--- a/fixtures/vcr_cassettes/publications_api_sourcelookup_test_doi.yml
+++ b/fixtures/vcr_cassettes/publications_api_sourcelookup_test_doi.yml
@@ -16,7 +16,7 @@ http_interactions:
                               <Filter>
                                   <Column>DOI</Column>
                                   <Operator>Equals</Operator>
-                                  <Value>10.1016/j.mcn.2012.03.007</Value>
+                                  <Value>10.1016/j.mcn.2012.03.008</Value>
                               </Filter>
                           </Criterion>
                       </Criteria>
@@ -61,19 +61,19 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 01 Dec 2015 19:06:05 GMT
+      - Tue, 01 Dec 2015 19:05:10 GMT
       Content-Length:
       - '278'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>142612</queryID>\r\n
+        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>143234</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Tue, 01 Dec 2015 19:06:06 GMT
+  recorded_at: Tue, 01 Dec 2015 19:05:10 GMT
 - request:
     method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/142612?format=xml&page=0&pageSize=2147483647&v=version/3
+    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/143234?format=xml&page=0&pageSize=2147483647&v=version/3
     body:
       encoding: US-ASCII
       string: ''
@@ -110,50 +110,44 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Tue, 01 Dec 2015 19:06:06 GMT
+      - Tue, 01 Dec 2015 19:05:10 GMT
       Content-Length:
-      - '4108'
+      - '3708'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
-        \   <PublicationItemID>60813767</PublicationItemID>\r\n    <Title>The T3-induced
-        gene KLF9 regulates oligodendrocyte differentiation and myelin regeneration</Title>\r\n
-        \   <Abstract>Hypothyroidism is a well-described cause of hypomyelination.
-        In addition, thyroid hormone (T3) has recently been shown to enhance remyelination
-        in various animal models of CNS demyelination. What are the ways in which
-        T3 promotes the development and regeneration of healthy myelin? To begin to
-        understand the mechanisms by which 13 drives myelination, we have identified
-        genes regulated specifically by T3 in purified oligodendrocyte precursor cells
-        (OPCs). Among the genes identified by genomic expression analyses were four
-        transcription factors, Kruppel-like factor 9 (KLF9), basic helix-loop-helix
-        family member e22 (BHLHe22), Hairless (Hr), and Albumin D box-binding protein
-        (DBP), all of which were induced in OPCs by both brief and long term exposure
-        to T3. To begin to investigate the role of these genes in myelination, we
-        focused on the most rapidly and robustly induced of these, KLF9, and found
-        it is both necessary and sufficient to promote oligodendrocyte differentiation
-        in vitro. Surprisingly, we found that loss of KLF9 in vivo negligibly affects
-        the formation of CNS myelin during development, but does significantly delay
-        remyelination in cuprizone-induced demyelinated lesions. These experiments
-        indicate that KLF9 is likely a novel integral component of the T3-driven signaling
-        cascade that promotes the regeneration of lost myelin. Future analyses of
-        the roles of KLF9 and other identified T3-induced genes in myelination may
-        lead to novel insights into how to enhance the regeneration of myelin in demyelinating
-        diseases such as multiple sclerosis. (c) 2012 Elsevier Inc. All rights reserved.</Abstract>\r\n
-        \   <AuthorList>Dugas,Jason,C|Ibrahim,Adiljan,|Barres,Ben,A</AuthorList>\r\n
-        \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>IN-VIVO|CONGENITAL HYPOTHYROIDISM|THYROID-HORMONE
-        ACTION|CENTRAL-NERVOUS-SYSTEM|ELEMENT-BINDING PROTEIN-1|MAGNETIC-RESONANCE
-        SPECTROSCOPY|RAT-BRAIN|EXPERIMENTAL HYPOTHYROIDISM|SPINAL-CORD DEMYELINATION|KRUPPEL-LIKE
-        FACTOR-9|OLIGODENDROCYTE|MYELIN|thyroid hormone|cuprizone|Klf9|BTEB1</KeywordList>\r\n
+        \   <PublicationItemID>60830932</PublicationItemID>\r\n    <Title>Protein
+        kinase C alpha and integrin-linked kinase mediate the negative axon guidance
+        effects of Sonic hedgehog</Title>\r\n    <Abstract>In addition to its role
+        as a morphogen, Sonic hedgehog (Shh) has also been shown to function as a
+        guidance factor that directly acts on the growth cones of various types of
+        axons. However, the noncanonical signaling pathways that mediate the guidance
+        effects of Shh protein remain poorly understood. We demonstrate that a novel
+        signaling pathway consisting of protein kinase C alpha (PKC alpha) and integrin-linked
+        kinase (ILK) mediates the negative guidance effects of high concentration
+        of Shh on retinal ganglion cell (RGC) axons. Shh rapidly increased Ca2+ level
+        and activated PKC alpha and ILK in the growth cones of RGC axons. By in vitro
+        kinase assay, PKC alpha was found to directly phosphorylate ILK on threonine-173
+        and -181. Inhibition of PKC alpha or expression of a mutant ILK with the PKC
+        alpha phosphorylation sites mutated (ILK-DM), abolished the Shh-induced macropinocytosis,
+        growth cone collapse and repulsive axon turning. In vivo, expression of a
+        dominant negative PKC alpha or ILK-DM disrupted RGC axon pathfinding at the
+        optic chiasm but not the projection toward the optic disk, supporting that
+        this signaling pathway plays a specific role in Shh-mediated negative guidance
+        effects. (c) 2012 Elsevier Inc. All rights reserved.</Abstract>\r\n    <AuthorList>Guo,Daorong,|Standley,Clive,|Bellve,Karl,|Fogarty,Kevin,|Bao,Zheng-Zheng,</AuthorList>\r\n
+        \   <AuthorCount>5</AuthorCount>\r\n    <KeywordList>SELECTIVE-INHIBITION|NERVE
+        GROWTH|STRUCTURAL BASIS|ILK|NEURITE OUTGROWTH|GROWTH CONE GUIDANCE|GANGLION-CELL
+        AXONS|PKC-DELTA|ACTIVATION|MOUSE OPTIC CHIASM|Shh|axon guidance|ILK|PKC alpha</KeywordList>\r\n
         \   <DocumentTypeList>Article</DocumentTypeList>\r\n    <DocumentCategory>Journal
-        Document</DocumentCategory>\r\n    <NumberOfReferences>61</NumberOfReferences>\r\n
-        \   <TimesCited>22</TimesCited>\r\n    <TimesNotSelfCited>22</TimesNotSelfCited>\r\n
-        \   <PMID>22472204</PMID>\r\n    <WoSItemID>000305547700005</WoSItemID>\r\n
+        Document</DocumentCategory>\r\n    <NumberOfReferences>63</NumberOfReferences>\r\n
+        \   <TimesCited>12</TimesCited>\r\n    <TimesNotSelfCited>12</TimesNotSelfCited>\r\n
+        \   <PMID>22521536</PMID>\r\n    <WoSItemID>000305547700008</WoSItemID>\r\n
         \   <PublicationSourceTitle>MOLECULAR AND CELLULAR NEUROSCIENCE</PublicationSourceTitle>\r\n
-        \   <Volume>50</Volume>\r\n    <Issue>1</Issue>\r\n    <Pagination>45-57</Pagination>\r\n
+        \   <Volume>50</Volume>\r\n    <Issue>1</Issue>\r\n    <Pagination>82-92</Pagination>\r\n
         \   <PublicationDate>2012-05-01T00:00:00</PublicationDate>\r\n    <PublicationYear>2012</PublicationYear>\r\n
         \   <PublicationType>Journal</PublicationType>\r\n    <PublicationSubjectCategoryList>Neurosciences</PublicationSubjectCategoryList>\r\n
-        \   <ISSN>1044-7431</ISSN>\r\n    <DOI>10.1016/j.mcn.2012.03.007</DOI>\r\n
+        \   <ISSN>1044-7431</ISSN>\r\n    <DOI>10.1016/j.mcn.2012.03.008</DOI>\r\n
         \   <ConferenceStartDate xsi:nil=\"true\" />\r\n    <ConferenceEndDate xsi:nil=\"true\"
         />\r\n    <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n
         \   <NormalizedRank xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\"
@@ -161,9 +155,9 @@ http_interactions:
         PRESS INC ELSEVIER SCIENCE</CopyrightPublisher>\r\n    <CopyrightCity>SAN
         DIEGO</CopyrightCity>\r\n    <PublicationImpactFactorList>3.837,2012,ExactPublicationYear|3.734,2013,MostRecentYear</PublicationImpactFactorList>\r\n
         \   <PublicationCategoryRankingList>74/252;NEUROSCIENCES;2012;SC;ExactPublicationYear|82/252;NEUROSCIENCES;2013;SC;MostRecentYear</PublicationCategoryRankingList>\r\n
-        \   <AuthorCitationCountList>1,0,22|2,0,22|3,0,22</AuthorCitationCountList>\r\n
+        \   <AuthorCitationCountList>1,0,12|2,0,12|3,0,12|4,0,12|5,0,12</AuthorCitationCountList>\r\n
         \   <CopyrightStateProvince>CA</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Tue, 01 Dec 2015 19:06:06 GMT
+  recorded_at: Tue, 01 Dec 2015 19:05:10 GMT
 recorded_with: VCR 2.9.3
