--- a/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
+++ b/fixtures/vcr_cassettes/sciencewire_client_spec_returns_empty_array.yml
@@ -2,204 +2,56 @@
 http_interactions:
 - request:
     method: post
-    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
-    body:
-      encoding: US-ASCII
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n\t
-        \    <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n\t
-        \   XMLSchema\">\n\t      <Criterion>\n\t        <Criteria><Criterion>\n\t
-        \           <TextSearch>\n                  <QueryPredicate>(\"ottawa,yukon\"
-        or \"OTTAWA,Y\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
-        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>4</MaximumRows>\n
-        \                 </TextSearch>\n\t          </Criterion><Criterion>\n  \t
-        \           <Filter>\n  \t              <Column>AuthorLastName</Column>\n
-        \ \t              <Operator>BeginsWith</Operator>\n  \t              <Value>OTTAWA</Value>\n
-        \ \t            </Filter>\n  \t          </Criterion><Criterion>\n  \t            <Filter>\n
-        \ \t              <Column>AuthorFirstName</Column>\n  \t              <Operator>BeginsWith</Operator>\n
-        \ \t              <Value>Y</Value>\n  \t            </Filter>\n  \t          </Criterion><Criterion>\n
-        \     \t            <Filter>\n      \t              <Column>DocumentCategory</Column>\n
-        \     \t              <Operator>In</Operator>\n                      <Values>\n
-        \     \t                <Value>Journal Document</Value>\n                        <Value>Conference
-        Proceeding Document</Value>\n                      </Values>\n      \t            </Filter>\n
-        \     \t          </Criterion></Criteria>\n\t      </Criterion>\n\t      <Columns>\n\t
-        \       <SortColumn>\n\t          <Column>Rank</Column>\n\t          <Direction>Descending</Direction>\n\t
-        \       </SortColumn>\n\t      </Columns>\n\t     <MaximumRows>4</MaximumRows>\n\t
-        \   </query>\n\t    ]]></xmlQuery>\n      </ScienceWireQueryXMLParameter>"
-    headers:
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - stg.sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-      Expect:
-      - 100-continue
-      Content-Type:
-      - text/xml
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 15 Jun 2015 21:52:20 GMT
-      Content-Length:
-      - '277'
-    body:
-      encoding: US-ASCII
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>79592</queryID>\r\n
-        \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
-    http_version: 
-  recorded_at: Mon, 15 Jun 2015 21:52:20 GMT
-- request:
-    method: get
-    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/79592?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - stg.sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 15 Jun 2015 21:52:20 GMT
-      Content-Length:
-      - '148'
-    body:
-      encoding: US-ASCII
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
-    http_version: 
-  recorded_at: Mon, 15 Jun 2015 21:52:20 GMT
-- request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - some-license-id
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 500
-      message: Internal Server Error
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - text/html
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 29 Jun 2015 15:50:41 GMT
-      Content-Length:
-      - '1208'
-    body:
-      encoding: UTF-8
-      string: "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">\r\n<html
-        xmlns=\"http://www.w3.org/1999/xhtml\">\r\n<head>\r\n<meta http-equiv=\"Content-Type\"
-        content=\"text/html; charset=iso-8859-1\"/>\r\n<title>500 - Internal server
-        error.</title>\r\n<style type=\"text/css\">\r\n<!--\r\nbody{margin:0;font-size:.7em;font-family:Verdana,
-        Arial, Helvetica, sans-serif;background:#EEEEEE;}\r\nfieldset{padding:0 15px
-        10px 15px;} \r\nh1{font-size:2.4em;margin:0;color:#FFF;}\r\nh2{font-size:1.7em;margin:0;color:#CC0000;}
-        \r\nh3{font-size:1.2em;margin:10px 0 0 0;color:#000000;} \r\n#header{width:96%;margin:0
-        0 0 0;padding:6px 2% 6px 2%;font-family:\"trebuchet MS\", Verdana, sans-serif;color:#FFF;\r\nbackground-color:#555555;}\r\n#content{margin:0
-        0 0 2%;position:relative;}\r\n.content-container{background:#FFF;width:96%;margin-top:8px;padding:10px;position:relative;}\r\n-->\r\n</style>\r\n</head>\r\n<body>\r\n<div
-        id=\"header\"><h1>Server Error</h1></div>\r\n<div id=\"content\">\r\n <div
-        class=\"content-container\"><fieldset>\r\n  <h2>500 - Internal server error.</h2>\r\n
-        \ <h3>There is a problem with the resource you are looking for, and it cannot
-        be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
-    http_version: 
-  recorded_at: Mon, 29 Jun 2015 15:50:41 GMT
-- request:
-    method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
-      string: "<?xml version=\"1.0\"?>\n      <ScienceWireQueryXMLParameter xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\"
-        xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\">\n      <xmlQuery><![CDATA[\n\t
-        \    <query xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns:xsd=\"http://www.w3.org/2001/\n\t
-        \   XMLSchema\">\n\t      <Criterion>\n\t        <Criteria><Criterion>\n\t
-        \           <TextSearch>\n                  <QueryPredicate>(\"ottawa,yukon\"
-        or \"OTTAWA,Y\") and Stanford</QueryPredicate>\n                  <SearchType>ExactMatch</SearchType>\n
-        \                 <Columns>AggregateText</Columns>\n                  <MaximumRows>4</MaximumRows>\n
-        \                 </TextSearch>\n\t          </Criterion><Criterion>\n  \t
-        \           <Filter>\n  \t              <Column>AuthorLastName</Column>\n
-        \ \t              <Operator>BeginsWith</Operator>\n  \t              <Value>OTTAWA</Value>\n
-        \ \t            </Filter>\n  \t          </Criterion><Criterion>\n  \t            <Filter>\n
-        \ \t              <Column>AuthorFirstName</Column>\n  \t              <Operator>BeginsWith</Operator>\n
-        \ \t              <Value>Y</Value>\n  \t            </Filter>\n  \t          </Criterion><Criterion>\n
-        \     \t            <Filter>\n      \t              <Column>DocumentCategory</Column>\n
-        \     \t              <Operator>In</Operator>\n                      <Values>\n
-        \     \t                <Value>Journal Document</Value>\n                        <Value>Conference
-        Proceeding Document</Value>\n                      </Values>\n      \t            </Filter>\n
-        \     \t          </Criterion></Criteria>\n\t      </Criterion>\n\t      <Columns>\n\t
-        \       <SortColumn>\n\t          <Column>Rank</Column>\n\t          <Direction>Descending</Direction>\n\t
-        \       </SortColumn>\n\t      </Columns>\n\t     <MaximumRows>4</MaximumRows>\n\t
-        \   </query>\n\t    ]]></xmlQuery>\n      </ScienceWireQueryXMLParameter>"
+      string: |-
+        <?xml version="1.0"?>
+              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+              <xmlQuery><![CDATA[
+               <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/
+              XMLSchema">
+                <Criterion>
+                  <Criteria><Criterion>
+                      <TextSearch>
+                          <QueryPredicate>("ottawa,yukon" or "OTTAWA,Y") and Stanford</QueryPredicate>
+                          <SearchType>ExactMatch</SearchType>
+                          <Columns>AggregateText</Columns>
+                          <MaximumRows>4</MaximumRows>
+                          </TextSearch>
+                    </Criterion><Criterion>
+                        <Filter>
+                          <Column>AuthorLastName</Column>
+                          <Operator>BeginsWith</Operator>
+                          <Value>OTTAWA</Value>
+                        </Filter>
+                      </Criterion><Criterion>
+                        <Filter>
+                          <Column>AuthorFirstName</Column>
+                          <Operator>BeginsWith</Operator>
+                          <Value>Y</Value>
+                        </Filter>
+                      </Criterion><Criterion>
+                            <Filter>
+                              <Column>DocumentCategory</Column>
+                              <Operator>In</Operator>
+                              <Values>
+                                <Value>Journal Document</Value>
+                                <Value>Conference Proceeding Document</Value>
+                              </Values>
+                            </Filter>
+                          </Criterion></Criteria>
+                </Criterion>
+                <Columns>
+                  <SortColumn>
+                    <Column>Rank</Column>
+                    <Direction>Descending</Direction>
+                  </SortColumn>
+                </Columns>
+               <MaximumRows>4</MaximumRows>
+              </query>
+              ]]></xmlQuery>
+              </ScienceWireQueryXMLParameter>
     headers:
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
@@ -210,7 +62,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
       Expect:
@@ -235,7 +87,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 29 Jun 2015 16:48:09 GMT
+      - Tue, 01 Dec 2015 19:06:36 GMT
       Content-Length:
       - '278'
     body:
@@ -244,7 +96,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>129741</queryID>\r\n
         \ <queryResultRows>0</queryResultRows>\r\n  <totalRows>0</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 29 Jun 2015 16:48:09 GMT
+  recorded_at: Tue, 01 Dec 2015 19:06:36 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/129741?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -263,7 +115,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
   response:
@@ -284,7 +136,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 29 Jun 2015 16:48:09 GMT
+      - Tue, 01 Dec 2015 19:06:36 GMT
       Content-Length:
       - '148'
     body:
@@ -292,5 +144,5 @@ http_interactions:
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" />"
     http_version: 
-  recorded_at: Mon, 29 Jun 2015 16:48:09 GMT
-recorded_with: VCR 2.5.0
+  recorded_at: Tue, 01 Dec 2015 19:06:37 GMT
+recorded_with: VCR 2.9.3
