--- a/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
+++ b/fixtures/vcr_cassettes/sciencewire_harvester_wos_mix.yml
@@ -2,220 +2,6 @@
 http_interactions:
 - request:
     method: post
-    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
-    body:
-      encoding: US-ASCII
-      string: |-
-        <?xml version="1.0"?>
-              <ScienceWireQueryXMLParameter xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-              <xmlQuery><![CDATA[
-              <query xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-                <Criterion ConjunctionOperator="AND">
-                  <Criteria>
-                    <Criterion>
-                      <Filter>
-                        <Column>WoSItemID</Column>
-                        <Operator>In</Operator>
-                        <Values>
-        <Value>000309917800142</Value>
-        </Values>
-                        </Filter>
-                      </Criterion>
-                    </Criteria>
-                  </Criterion><Columns>
-                    <SortColumn>
-                      <Column>PublicationItemID</Column>
-                      <Direction>Ascending</Direction>
-                    </SortColumn>
-                  </Columns>
-                </query>
-            ]]></xmlQuery>
-              </ScienceWireQueryXMLParameter>
-    headers:
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - stg.sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-      Expect:
-      - 100-continue
-      Content-Type:
-      - text/xml
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 15 Jun 2015 21:53:21 GMT
-      Content-Length:
-      - '277'
-    body:
-      encoding: US-ASCII
-      string: "<?xml version=\"1.0\"?>\r\n<ScienceWireQueryIDResponse xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>79591</queryID>\r\n
-        \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
-    http_version: 
-  recorded_at: Mon, 15 Jun 2015 21:53:22 GMT
-- request:
-    method: get
-    uri: https://stg.sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/79591?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - ***REMOVED***
-      Host:
-      - stg.sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - application/xml; charset=utf-8
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 15 Jun 2015 21:53:23 GMT
-      Content-Length:
-      - '3087'
-    body:
-      encoding: US-ASCII
-      string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
-        xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <PublicationItem>\r\n
-        \   <PublicationItemID>61861700</PublicationItemID>\r\n    <Title>Understanding
-        the Role of Grain Boundaries in Sulfide Thin Film Solar Cells with Scanning
-        Probe Microscopy</Title>\r\n    <Abstract>Grain boundaries (GBs) in Cu(In,
-        Ga)Se-2 (CIGS) and CdTe thin film solar cells are known to be beneficial for
-        achieving high conversion efficiencies. In this work, we will show that Cu2ZnSnS4
-        (CZTS) and Cu2ZnSn(S, Se)(4) (CZTSSe) solar cells have the same GB electronic
-        properties as CIGS and CdTe. Scanning Kelvin Probe Microscopy (SKPM) measurements
-        reveal a higher positive surface potential at the GBs as compared to the grain
-        while Conductive Atomic Force Microscopy (C-AFM) measurements show higher
-        current flow in the vicinity of the GBs. These two measurement results are
-        similar to those obtained for CIGS and CdTe and together they demonstrate
-        the enhanced minority carrier collection taking place at the GBs of CZTS and
-        CZTSSe. This implies that CZTS and CZTSSe solar cells have the potential to
-        achieve the high efficiencies that CIGS and CdTe solar cells enjoy.</Abstract>\r\n
-        \   <AuthorList>Li,Joel,B|Chawla,Vardaan,|Clemens,Bruce,M</AuthorList>\r\n
-        \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>solar cells|SKPM|photovoltaic
-        cells|grain boundaries|C-AFM|CZTS|CZTSSe</KeywordList>\r\n    <DocumentTypeList>Article</DocumentTypeList>\r\n
-        \   <DocumentCategory>Conference Proceeding Document</DocumentCategory>\r\n
-        \   <NumberOfReferences>10</NumberOfReferences>\r\n    <TimesCited>0</TimesCited>\r\n
-        \   <TimesNotSelfCited>0</TimesNotSelfCited>\r\n    <PMID xsi:nil=\"true\"
-        />\r\n    <WoSItemID>000309917800142</WoSItemID>\r\n    <PublicationSourceTitle>2012
-        38TH IEEE PHOTOVOLTAIC SPECIALISTS CONFERENCE (PVSC)</PublicationSourceTitle>\r\n
-        \   <Pagination />\r\n    <PublicationDate>2012-01-01T00:00:00</PublicationDate>\r\n
-        \   <PublicationYear>2012</PublicationYear>\r\n    <PublicationType>Book</PublicationType>\r\n
-        \   <PublicationSubjectCategoryList>Energy &amp; Fuels|Engineering, Electrical
-        &amp; Electronic|Physics, Applied</PublicationSubjectCategoryList>\r\n    <ISBN>978-1-4673-0066-7</ISBN>\r\n
-        \   <ConferenceTitle>38th IEEE Photovoltaic Specialists Conference (PVSC)</ConferenceTitle>\r\n
-        \   <ConferenceStartDate>2012-06-03T00:00:00</ConferenceStartDate>\r\n    <ConferenceEndDate>2012-06-08T00:00:00</ConferenceEndDate>\r\n
-        \   <ConferenceCity>AUSTIN</ConferenceCity>\r\n    <ConferenceStateCountry>TX</ConferenceStateCountry>\r\n
-        \   <Rank xsi:nil=\"true\" />\r\n    <OrdinalRank>0</OrdinalRank>\r\n    <NormalizedRank
-        xsi:nil=\"true\" />\r\n    <NewPublicationItemID xsi:nil=\"true\" />\r\n    <IsObsolete>false</IsObsolete>\r\n
-        \   <CopyrightPublisher>IEEE</CopyrightPublisher>\r\n    <CopyrightCity>NEW
-        YORK</CopyrightCity>\r\n    <AuthorCitationCountList>1,0,0|2,0,0|3,0,0</AuthorCitationCountList>\r\n
-        \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
-        STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
-    http_version: 
-  recorded_at: Mon, 15 Jun 2015 21:53:23 GMT
-- request:
-    method: get
-    uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/?format=xml&page=0&pageSize=2147483647&v=version/3
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-      Content-Type:
-      - text/xml
-      Licenseid:
-      - some-license-id
-      Host:
-      - sciencewirerest.discoverylogic.com
-      Connection:
-      - Keep-Alive
-  response:
-    status:
-      code: 500
-      message: Internal Server Error
-    headers:
-      Cache-Control:
-      - private
-      Content-Type:
-      - text/html
-      Server:
-      - Microsoft-IIS/7.5
-      X-Aspnetmvc-Version:
-      - '2.0'
-      X-Aspnet-Version:
-      - 4.0.30319
-      X-Powered-By:
-      - ASP.NET
-      Date:
-      - Mon, 29 Jun 2015 15:51:23 GMT
-      Content-Length:
-      - '1208'
-    body:
-      encoding: UTF-8
-      string: "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">\r\n<html
-        xmlns=\"http://www.w3.org/1999/xhtml\">\r\n<head>\r\n<meta http-equiv=\"Content-Type\"
-        content=\"text/html; charset=iso-8859-1\"/>\r\n<title>500 - Internal server
-        error.</title>\r\n<style type=\"text/css\">\r\n<!--\r\nbody{margin:0;font-size:.7em;font-family:Verdana,
-        Arial, Helvetica, sans-serif;background:#EEEEEE;}\r\nfieldset{padding:0 15px
-        10px 15px;} \r\nh1{font-size:2.4em;margin:0;color:#FFF;}\r\nh2{font-size:1.7em;margin:0;color:#CC0000;}
-        \r\nh3{font-size:1.2em;margin:10px 0 0 0;color:#000000;} \r\n#header{width:96%;margin:0
-        0 0 0;padding:6px 2% 6px 2%;font-family:\"trebuchet MS\", Verdana, sans-serif;color:#FFF;\r\nbackground-color:#555555;}\r\n#content{margin:0
-        0 0 2%;position:relative;}\r\n.content-container{background:#FFF;width:96%;margin-top:8px;padding:10px;position:relative;}\r\n-->\r\n</style>\r\n</head>\r\n<body>\r\n<div
-        id=\"header\"><h1>Server Error</h1></div>\r\n<div id=\"content\">\r\n <div
-        class=\"content-container\"><fieldset>\r\n  <h2>500 - Internal server error.</h2>\r\n
-        \ <h3>There is a problem with the resource you are looking for, and it cannot
-        be displayed.</h3>\r\n </fieldset></div>\r\n</div>\r\n</body>\r\n</html>\r\n"
-    http_version: 
-  recorded_at: Mon, 29 Jun 2015 15:51:23 GMT
-- request:
-    method: post
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery?format=xml
     body:
       encoding: UTF-8
@@ -255,7 +41,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
       Expect:
@@ -280,7 +66,7 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 29 Jun 2015 16:47:25 GMT
+      - Tue, 01 Dec 2015 19:07:35 GMT
       Content-Length:
       - '278'
     body:
@@ -289,7 +75,7 @@ http_interactions:
         xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\">\r\n  <queryID>136741</queryID>\r\n
         \ <queryResultRows>1</queryResultRows>\r\n  <totalRows>1</totalRows>\r\n</ScienceWireQueryIDResponse>"
     http_version: 
-  recorded_at: Mon, 29 Jun 2015 16:47:25 GMT
+  recorded_at: Tue, 01 Dec 2015 19:07:35 GMT
 - request:
     method: get
     uri: https://sciencewirerest.discoverylogic.com/PublicationCatalog/PublicationQuery/136741?format=xml&page=0&pageSize=2147483647&v=version/3
@@ -308,7 +94,7 @@ http_interactions:
       Licenseid:
       - ***REMOVED***
       Host:
-      - sciencewirerest.discoverylogic.com
+      - stg.sciencewirerest.discoverylogic.com
       Connection:
       - Keep-Alive
   response:
@@ -329,9 +115,9 @@ http_interactions:
       X-Powered-By:
       - ASP.NET
       Date:
-      - Mon, 29 Jun 2015 16:47:25 GMT
+      - Tue, 01 Dec 2015 19:07:35 GMT
       Content-Length:
-      - '3087'
+      - '2964'
     body:
       encoding: UTF-8
       string: "<?xml version=\"1.0\"?>\r\n<ArrayOfPublicationItem xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\"
@@ -352,13 +138,11 @@ http_interactions:
         achieve the high efficiencies that CIGS and CdTe solar cells enjoy.</Abstract>\r\n
         \   <AuthorList>Li,Joel,B|Chawla,Vardaan,|Clemens,Bruce,M</AuthorList>\r\n
         \   <AuthorCount>3</AuthorCount>\r\n    <KeywordList>solar cells|SKPM|photovoltaic
-        cells|grain boundaries|C-AFM|CZTS|CZTSSe</KeywordList>\r\n    <DocumentTypeList>Article</DocumentTypeList>\r\n
-        \   <DocumentCategory>Conference Proceeding Document</DocumentCategory>\r\n
-        \   <NumberOfReferences>10</NumberOfReferences>\r\n    <TimesCited>0</TimesCited>\r\n
-        \   <TimesNotSelfCited>0</TimesNotSelfCited>\r\n    <PMID xsi:nil=\"true\"
-        />\r\n    <WoSItemID>000309917800142</WoSItemID>\r\n    <PublicationSourceTitle>2012
-        38TH IEEE PHOTOVOLTAIC SPECIALISTS CONFERENCE (PVSC)</PublicationSourceTitle>\r\n
-        \   <Pagination />\r\n    <PublicationDate>2012-01-01T00:00:00</PublicationDate>\r\n
+        cells|grain boundaries|C-AFM|CZTS|CZTSSe</KeywordList>\r\n    <NumberOfReferences>10</NumberOfReferences>\r\n
+        \   <TimesCited>0</TimesCited>\r\n    <TimesNotSelfCited>0</TimesNotSelfCited>\r\n
+        \   <PMID xsi:nil=\"true\" />\r\n    <WoSItemID>000309917800142</WoSItemID>\r\n
+        \   <PublicationSourceTitle>2012 38TH IEEE PHOTOVOLTAIC SPECIALISTS CONFERENCE
+        (PVSC)</PublicationSourceTitle>\r\n    <Pagination />\r\n    <PublicationDate>2012-01-01T00:00:00</PublicationDate>\r\n
         \   <PublicationYear>2012</PublicationYear>\r\n    <PublicationType>Book</PublicationType>\r\n
         \   <PublicationSubjectCategoryList>Energy &amp; Fuels|Engineering, Electrical
         &amp; Electronic|Physics, Applied</PublicationSubjectCategoryList>\r\n    <ISBN>978-1-4673-0066-7</ISBN>\r\n
@@ -372,7 +156,7 @@ http_interactions:
         \   <CopyrightStateProvince>NY</CopyrightStateProvince>\r\n    <CopyrightCountry>UNITED
         STATES</CopyrightCountry>\r\n  </PublicationItem>\r\n</ArrayOfPublicationItem>"
     http_version: 
-  recorded_at: Mon, 29 Jun 2015 16:47:26 GMT
+  recorded_at: Tue, 01 Dec 2015 19:07:35 GMT
 - request:
     method: post
     uri: http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml
@@ -392,7 +176,7 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 29 Jun 2015 16:47:26 GMT
+      - Tue, 01 Dec 2015 19:07:37 GMT
       Server:
       - Apache
       Access-Control-Allow-Origin:
@@ -400,12 +184,12 @@ http_interactions:
       Cache-Control:
       - private
       Ncbi-Sid:
-      - 73BF69CE591769E1_0296SID
+      - 9DFC059165DEFF91_0179SID
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=73BF69CE591769E1_0296SID; domain=.nih.gov; path=/; expires=Wed, 29
-        Jun 2016 16:47:26 GMT
+      - ncbi_sid=9DFC059165DEFF91_0179SID; domain=.nih.gov; path=/; expires=Thu, 01
+        Dec 2016 19:07:37 GMT
       X-Ua-Compatible:
       - IE=Edge
       Connection:
@@ -418,5 +202,5 @@ http_interactions:
         PUBLIC \"-//NLM//DTD efetch 20131226//EN\" \"http://eutils.ncbi.nlm.nih.gov/eutils/dtd/20131226/efetch.dtd\">\n<eFetchResult>\n\t<ERROR>WebEnv
         parameter is required</ERROR>\n</eFetchResult>\n"
     http_version: 
-  recorded_at: Mon, 29 Jun 2015 16:47:26 GMT
-recorded_with: VCR 2.5.0
+  recorded_at: Tue, 01 Dec 2015 19:07:37 GMT
+recorded_with: VCR 2.9.3
